l10n: update newsletter.lang files and confirmation messages (Bug 742997)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104999 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -181,3 +181,15 @@ Danke, dass Sie uns gesagt haben, warum Sie uns verlassen.
 Mozilla-Newsletter
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+Vielen Dank! Bitte kontrollieren Sie Ihren Posteingang, um Ihr Abonnement zu bestätigen.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Sie werden eine E-Mail von mozilla@e.mozilla.org erhalten, um Ihr Abonnement zu bestätigen. Sollte dies nicht der Fall sein, kontrollieren Sie bitte Ihren Spam-Ordner. Sie müssen Ihr Abonnement bestätigen, um diesen Newsletter weiterhin zu bekommen.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Bitte fügen Sie die E-Mail-Adresse mozilla@e.mozilla.org zu Ihrer Kontaktliste hinzu, damit unsere E-Mails Sie erreichen.
+
+
