--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -181,3 +181,15 @@ Merci de nous dire pourquoi vous vous désinscrivez.
 Mozilla Newsletters
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+Merci&nbsp;! Veuillez relever votre boîte aux lettres pour confirmer votre abonnement.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Vous allez recevoir un message de mozilla@e.mozilla.org pour confirmer votre abonnement. Si vous ne le voyez pas dans votre boîte aux lettres, vérifiez qu'il n'a pas échoué dans les courriers indésirables. Vous devrez confirmer votre abonnement pour recevoir notre lettre d'information.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Veuillez vous assurer que notre adresse d'expéditeur mozilla@e.mozilla.org est bien ajoutée à votre carnet d'adresses, afin que nos messages arrivent à coup sûr dans votre boîte.
+
+
