--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -181,3 +181,15 @@ Tak fordi du fortæller os, hvorfor du framelder dig.
 Nyhedsbreve fra Mozilla
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+Thanks! Please check your inbox to confirm your subscription.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+
+
