--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -181,3 +181,15 @@ Gracias por contarnos por qué te vas.
 Mozilla Newsletters
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+¡Gracias! Por favor, revisa tu buzón de correo para confirmar tu suscripción.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Recibirás un correo de mozilla@e.mozilla.org para confirmar tu suscripción. Si no lo ves, verifica tu filtro de spam. Debes confirmar tu suscripción para recibir nuestro boletín.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Por favor, añade nuestra dirección de envío mozilla@e.mozilla.org a tu libreta de direcciones para asegurarte de que siempre lleguemos a tu buzón.
+
+
