--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -181,3 +181,15 @@ Obrigado por esclarecer sua partida.
 Mozilla Newsletters
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+Obrigado! Por favor, verifique sua caixa de entrada para confirmar sua inscrição.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Você receberá um email de mozilla@e.mozilla.org para confirmar sua inscrição. Se ele não aparecer em sua caixa de entrada, verifique sua pasta de spam. Você precisa confirmar sua inscrição para receber nossa newsletter.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Por favor, certifique-se de adicionar nosso endereço de envio: mozilla@e.mozilla.org na sua lista de contatos para garantir que sempre seremos bem vindos em sua caixa de entrada.
+
+
