--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -181,3 +181,15 @@ Firefox 也在您最愛的社群網站出沒，跟我們一起聊聊吧。
 Mozilla 電子報
 
 
+;Thanks! Please check your inbox to confirm your subscription.
+Thanks! Please check your inbox to confirm your subscription.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+
+
