l10n: fr, typo fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105005 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -62,7 +62,7 @@ Découvrez notre <span>lettre d'informations</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Votre inscription à la lettre d'information a bien été confirmée
+Votre inscription à la lettre d'information a bien été confirmée.
 
 
 ;Format
