--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -178,18 +178,18 @@ Firefox για κινητά
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Δελτία ειδήσεων Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Σας ευχαριστούμε! Παρακαλούμε ελέγξτε την αλληλογραφία σας για να επιβεβαιώσετε τη συνδρομή σας.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Θα λάβετε ένα μήνυμα από τη διεύθυνση «mozilla@e.mozilla.org» για να επιβεβαιώσετε τη συνδρομή σας. Αν δεν το βρείτε, ελέγξτε τα φίλτρα ανεπιθύμητης αλληλογραφίας. Θα πρέπει να επιβεβαιώσετε τη συνδρομή σας για να σας στέλνουμε τα δελτία νέων μας.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Σας παρακαλούμε να προσθέσετε τη διεύθυνση αποστολής: «mozilla@e.mozilla.org» στο ευρετήριο διευθύνσεων σας για να εξασφαλίσετε ότι τα μηνύματα μας θα μπαίνουν πάντα στα εισερχόμενα σας.
 
 
