Bug 752047 - [l10n: sv-SE] updated newsletter.lang file for www.mozilla.org. Translation by Mikael Hiort af Ornäs <mikael.hafo@gmail.com>
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105009 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -178,18 +178,18 @@ Tack för att du berättar för oss varför du lämnar oss.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozillas nyhetsbrev
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Tack! Gå till din inkorg för att bekräfta din prenumeration.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Du kommer att få ett e-brev från mozilla@e.mozilla.org för att bekräfta din prenumeration. Om du inte hittar det, titta i din skräppostmapp. Du måste bekräfta din prenumeration för att få vårt nyhetsbrev.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Kom ihåg att lägga till vår avsändaradress, mozilla@e.mozilla.org, i din adressbok för att säkerställa att vi alltid når din inkorg.
 
 
