localize new confirmation messages (Bug 742997)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105015 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/newsletter.lang
+++ b/nl/newsletter.lang
@@ -182,14 +182,14 @@ Mozilla-nieuwsbrieven
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Bedankt! Controleer uw Postvak IN om uw inschrijving te bevestigen.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+U ontvangt een e-mailbericht van mozilla@e.mozilla.org om uw inschrijving te bevestigen. Als u dit niet ziet, controleer dan uw spamfilter. U moet uw inschrijving bevestigen om onze nieuwsbrief te ontvangen.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Zorg dat u ons afzenderadres mozilla@e.mozilla.org aan uw adresboek toevoegt, zodat we uw Postvak IN altijd kunnen bereiken.
 
 
