--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -182,14 +182,14 @@ Mozilla newsletteri
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Hvala vam! Provjerite svoju e-poštu i potvrdite pretplatu.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Dobit ćete poruku od mozilla@e.mozilla.org s uputama za potvrdu pretplate. Ako ne uočite poruku, provjerite svoj antispam filter. Da biste mogli primati newsletter, trebat ćete potvrditi svoju pretplatu.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Preporučamo da dodate našu adresu e-pošte (mozilla@e.mozilla.org) u svoj adresar, kako biste uvijek primali naš newsletter.
 
 
