l10n: cy, lang files updates by Rhoslyn Prys
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105029 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -122,6 +122,6 @@ Defnyddio Firefox ar nifer o gyfrifiaduron? Nawr mae modd cydweddu eich ychwaneg
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Cyflym, cyflym, cyflym. <a %s>Mae Firefox ar gyfer Android newydd gael diweddariad mawr</a>. Cofiwch ddweud wrth pawb.
 
 
