--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -178,18 +178,18 @@ Diolch am ddweud pam rydych yn gadael.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Newyddlen Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Diolch! Gwiriwch eich Blwch Derbyn i gadarnhau eich tanysgrifiad.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Byddwch yn derbyn e-bost oddi wrth mozilla@e.mozilla.org i gadarnhau eich tanysgrifiad. Os nad yw i'w weld, gwiriwch eich hidl sbam. Rhaid i chi gadarnhau eich tanysgrifiad er mwyn derbyn y newyddlen.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Gwnewch yn siŵr eich bod yn ychwanegu ein cyfeiriad anfon: mozilla@e.mozilla.org i'ch llyfr cyfeiriadau er mwyn gwneud yn siŵr eich bod yn cyrraedd eich Blwch Derbyn.
 
 
