--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -182,14 +182,14 @@ Novaĵleteroj de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Dankon! Bonvolu kontroli vian enirkeston por konfirmi vian abonon.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Vi ricevos retmesaĝon de mozilla@e.mozilla.org por konfirmi vian abonon. Se vi ĝin ne vidas, kontrolu vian trudmesaĝan filtrilon. Vi devas konfirmi vian abonon por ricevi nian novaĵleteron.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Bonvolu certi ke vi aldonis nian retpoŝtan adreson: mozilla@e.mozilla.org al via adresaro, por esti certa ke ni ĉiam atingos vian enirkeston.
 
 
