--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -178,18 +178,16 @@ Köszönjük, hogy megosztotta velünk leiratkozásának okát.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla Hírlevél
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Köszönjük! Keresse meg postafiókjában a jóváhagyó levelet.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+A jóváhagyó levél a mozilla@e.mozilla.org e-mail cmíről fog érkezik. Amennyiben nem találja, nézzen szét a levélszemét között. Ahhoz, hogy hírlevelet kapjon, jóvé kell hagynia a feliratkozást.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Győződjön meg arról, hogy a levél küldője, a mozilla@e.mozilla.org szerepeljen a címjegyzékében. Így biztosan megkapja hírlevelünket.
