--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -182,14 +182,14 @@ Firefox также можно найти в ваших любимых социа
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Спасибо! Пожалуйста, проверьте свою папку входящих писем, чтобы подтвердить свою подписку.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Вы получите сообщение от mozilla@e.mozilla.org, просящее подтвердить вашу подписку. Если вы его не видите, проверьте свой спам-фильтр. Для получения нашей новостной рассылки вы должны подтвердить свою подписку.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Не забудьте добавить наш адрес отправителя: mozilla@e.mozilla.org в свою адресную книгу, чтобы почта от него всегда доходила до вашей папки входящих писем.
 
 
