--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -82,19 +82,19 @@ Tá Firefox ar Android optamaithe le haghaidh brabhsáil ar tháibléid anois. <
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Íosluchtaigh Firefox Béite</a>, tabhair aiseolas dúinn, agus cabhraigh linn snas a chur ar Firefox ar mhaithe lenár 450 milliún úsáideoir.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Tástáil gnéithe, agus cabhraigh linn snas a chur ar an chéad leagan eile. <a href="%">Íosluchtaigh Firefox Béite inniu!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+An dtaitníonn Firefox leat? Ar mhaith leat an chéad leagan eile a fheabhsú? <a href="%">Íosluchtaigh Firefox Béite</a> agus tabhair aiseolas dúinn inniu!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+An bhfuil an leagan is déanaí de Firefox Béite agat? <a href="%">Faigh anois é</a> agus cabhraigh linn na gnéithe is déanaí a thástáil.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
@@ -102,7 +102,7 @@ Nach bhfuil an Firefox Béite is déanaí agat? <a href="%">Faigh inniu é</a> 
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Ar mhaith leat aiseolas a thabhairt dúinn? <a href="%">Foghlaim conas is féidir</a> agus cabhraigh linn an chéad leagan eile de Firefox a fheabhsú.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
@@ -110,22 +110,22 @@ Want to share your feedback? <a href="%">Find out how</a> and help make the next
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Cabhraigh linn feabhas a chur ar an chéad leagan eile de Firefox. <a href="%">Bí i do chomhpháirtí</a> aagus roinn Firefox Béite le do chairde.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Tabhair cuireadh do chairde triail a bhaint as na gnéithe is nuaí i bhFirefox. <a href="%">Bí i do chomhpháirtí</a> agus roinn Firefox Aurora inniu.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+An mbaineann tú úsáid as Firefox ar ríomhairí éagsúla? Anois is féidir leat do chuid breiseán a shioncrónú ar do ríomhairí go léir. <a href="%">Foghlaim conas is féidir Sync a úsáid.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Sciobtha, sciobtha, sciobtha. <a %s>Fuair Firefox ar Android nuashonrú mór</a>. Cabhraigh linn an focal a scaipeadh.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
-{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
+{l10n-extra}Déan cuardach ar thuíteanna, ar chairde, nó ar thopaici i mbéal an phobail ón mbarra cuardaigh. Cliceáil an deilbhín cuardaigh ag barr an bhrabhsálaí ar dheis agus roghnaigh Twitter.
 
 
