--- a/ga-IE/newsletter.lang
+++ b/ga-IE/newsletter.lang
@@ -62,7 +62,7 @@ Léigh chuild rud inár <span>nuachtlitir</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Tá tú liostáilte leis an nuachtlitir anois.
 
 
 ;Format
@@ -70,126 +70,126 @@ Formáid
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Tá an úim is an tslinn agat! <span>Ach fan - tá tuilleadh ann</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ba mhaith linn nuacht a bhfuil suim agat inti a sheoladh chugat. Tabhair breis eolais fút féin dúinn, agus cláraigh le nuachtlitreacha eile ó Mhozilla.
 
 
 ;Firefox & You
-Firefox & You
+Tusa agus Firefox
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Ár Nuachtlitreacha Eile:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Faigh na leideanna agus cleasanna is déanaí chun an tairbhe is mó a bhaint as Firefox.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Soghluaiste
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Tuilleadh eolais faoi bhreiseáin mhór-le-rá agus gnéithe nua ar Firefox Soghluaiste.
 
 
 ;Beta News
-Beta News
+Nuacht Bhéite
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Léigh faoi na gnéithe is déanaí i bhFirefox, ar do ríomhaire agus ar do ghléas soghluaiste, roimh an leagan deireanach.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Bí cairdiúil linn!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Tá Firefox ar na suímh shóisialta is ansa leat. Ceangail linn agus glac páirt sa chomhrá.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Bainistigh do <span>Liostálacha</span>
 
 
 ;Subscribe
-Subscribe
+Liostáil
 
 
 ;Unsubscribe
-Unsubscribe
+Díliostáil
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Cuir tic anseo mura mian leat aon ríomhphost a fháil ó Mhozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Níor mhaith liom aon ríomhphost ó Mhozilla
 
 
 ;Save Preferences
-Save Preferences
+Sábháil do Roghanna
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Go raibh maith agat as do shocruithe ríomhphoist a athrú.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Tá tú díliostáilte anois.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Tá brón orm go bhfuil tú ag imeacht. Ar mhiste leat insint dúinn cén fáth?
 
 
 ;You send too many emails.
-You send too many emails.
+Seolann tú an iomarca ríomhphoist.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Níl suim agam san ábhar.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Bhí sé deacair do theachtaireachtaí ríomhphoist a léamh.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Níor liostáil mé riamh.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Tá mé ceangailte le Mozilla ar Facebook agus Twitter cheana.
 
 
 ;Submit
-Submit
+Seol
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Go raibh maith agat as insint dúinn cén fáth a bhfuil tú ag imeacht.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Nuachtlitreacha Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Go raibh maith agat! Féach ar do bhosca ríomhphoist chun an síntiús a chur i gcrích.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Gheobhaidh tú teachtaireacht ó mozilla@e.mozilla.org chun an síntiús a dhearbhú. Mura bhfeiceann tú é, féach ar do bhosca dramhphoist. Caithfidh tú an síntiús a dhearbhú chun an nuachtlitir a fháil.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Cuir ár seoladh ríomhphoist mozilla@e.mozilla.org i do leabhar seoltaí chun bheith cinnte go bhfaighfidh tú an nuachtlitir uainn i gcónaí.
 
 
