--- a/sk/newsletter.lang
+++ b/sk/newsletter.lang
@@ -62,7 +62,7 @@ Viac v našom <span>magazíne</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Odber magazínu bol potvrdený.
 
 
 ;Format
@@ -70,126 +70,125 @@ Formát
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+A je hotovo! <span>Počkať, je toho ešte viac</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Chcete dostávať čo najrelevantnejšie informácie? Povedzte nám o sebe čosi viac. A keď už ste tu, môžete sa prihlásiť k odberu ďalších noviniek o Mozille.
 
 
 ;Firefox & You
-Firefox & You
+Firefox a vy
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Naše iné magazíny:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Získate najnovšie tipy a triky, aby ste dostali zo svojho obľúbeného prehliadača čo najviac.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mobilný Firefox
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Pozrite si horúce novinky medzi doplnkami a funkciami mobilného Firefoxu.
 
 
 ;Beta News
-Beta News
+Novinky o beta verziách
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Prečítajte si o najnovších funkciách Firefoxu pre počítač aj mobilné zariadenia ešte pred finálnou verziou.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Buďme priatelia!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox je aj na obľúbených sociálnych sieťach. Spojte sa s nami a porozprávajme sa.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Správa <span>oberaných magazínov</span>
 
 
 ;Subscribe
-Subscribe
+Prihlásiť
 
 
 ;Unsubscribe
-Unsubscribe
+Odhlásiť
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Označte, ak chcete byť odstránený zo všetkých e-mailových zoznamov na posielanie noviniek od Mozilly
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Odstrániť ma zo všetkých e-mailov od Mozilly
 
 
 ;Save Preferences
-Save Preferences
+Uložiť nastavenia
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Ďakujeme za aktualizáciu vašich nastavení.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Váš odber bol zrušený.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Mrzí nás, že odchádzate. Môžete nám povedať svoje dôvody?
 
 
 ;You send too many emails.
-You send too many emails.
+Poslali ste mi príliš veľa e-mailových správ.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
-
+Obsah nebol pre mňa relevantný.
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+E-mailové správy boli ťažko čitateľné.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+K tomuto odberu som sa neprihlásil.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+S Mozillou som v kontakte na Facebooku a Twitteri.
 
 
 ;Submit
-Submit
+Odoslať
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Ďakujeme za uvedenie dôvodov, prečo odchádzate.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Magazíny Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Ďakujeme! Na vašu e-mailovú adresu bolo odoslané potvrdenie odberu.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Na potvrdenie odberu obdržíte správu z adresy mozilla@e.mozilla.org. Ak ju nevidíte, skontrolujte si spamový filter. Aby ste mohli magazín prijímať, musíte odber potvrdiť.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Nezabudnite si pridať adresu mozilla@e.mozilla.org do svojho adresára, aby sa správy od nás vždy dostali do vašej pošty.
 
 
