l10n: fa, Updated newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105119 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/newsletter.lang
+++ b/fa/newsletter.lang
@@ -178,18 +178,18 @@
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+خبرنامه‌ی موزیلا
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+ممنون! لطفا پست‌الکترونیکی خود را برای تایید ثبت‌نام، بررسی کنید.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+شما یک پست‌الکترونیکی از mozilla@e.mozilla.org برای تایید عضویت خود دریافت خواهید کرد. اگر نمی‌بینیداش، صندوق اسپم خود را بررسی کنید. شما باید عضویت خود را برای دریافت خبرنامه تایید کنید.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+لطفا از اضافه کردن آدرس ارسالی ما: mozilla@e.mozilla.org در دفترچه‌آدرس خود اطمینان حاصل کنید، تا از رسیدن پست‌های ما به شما مطمئن باشید.
 
 
