--- a/sq/newsletter.lang
+++ b/sq/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Merrni Lajme të Përmuajshme
 
@@ -178,18 +175,16 @@ Faleminderit që na treguat pse po largoheni.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Buletinë Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Faleminderit! Ju lutemi, kontrolloni postën tuaj që të ripohoni pajtimin tuaj.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Do të merrni një email prej mozilla@e.mozilla.org që të ripohoni pajtimin tuaj. Nëse nuk e gjeni, kontrolloni filtrin tuaj për të pavlerat. Duhet të ripohoni pajtimin tuaj, përpara se të merrni buletinin tonë.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Ju lutemi, mos harroni të shtoni adresën tonë: mozilla@e.mozilla.org te libri juaj i adresave që të jemi të sigurt se merrni përherë çka ju dërgojmë.
