--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -182,14 +182,14 @@ Nyhedsbreve fra Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Tak! Tjek din indbakke, så du kan bekræfte din tilmelding.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Du vil modtage en bekræftelsesmail fra mozilla@e.mozilla.org. Hvis du ikke kan se mailen, så tjek din spam-mappe. Du skal bekræfte din tilmelding for at modtage vores nyhedsbrev.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Tilføj vores afsenderadresse: mozilla@e.mozilla.org til din adressebog, så undgår du, at vores mails bliver fanget af dit spamfilter.
 
 
