--- a/fr/marketplace/partners.lang
+++ b/fr/marketplace/partners.lang
@@ -1,5 +1,5 @@
 ;Mozilla Marketplace Partners
-Partenaires Mozilla Marketplace
+Partenaires du Marketplace de Mozilla
 
 
 ;Mozilla Marketplace
@@ -7,58 +7,53 @@ Mozilla Marketplace {ok}
 
 
 ;Launch your app on the Web
-Launch your app on the Web
+Lancez votre application sur le Web
 
 
 ;Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps.
-Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps.
-
+Mozilla apporte au monde des applications ses valeurs essentielles&nbsp;: l'ouverture, la liberté et le choix de l'utilisateur.
 
 ;The Mozilla apps platform
-The Mozilla apps platform
+La plateforme Mozilla des applications
 
 
 ;Submit your app »
-Submit your app »
+Soumettez votre application »
 
 
 ;Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
-Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
-
+Créer des applications pour le Web permet aux développeurs d'avoir un contrôle intégral sur le contenu, le fonctionnement et la diffusion des applications, et d'accéder à un marché de centaines de millions d'utilisateurs de Firefox grâce au Marketplace de Mozilla.
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-
+En utilisant des standards ouverts et des API conçues par Mozilla, vous pourrez déployer vos applications sur de multiples plateformes, appareils et systèmes d'exploitation — comblant pour la première fois le fossé entre le Web et les applications natives.
 
 ;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Learn all about creating HTML5 apps at the Mozilla Developer Network »
+Tout savoir sur le développement d'applications HTML5 grâce au Mozilla Developer Network »
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-
+Pour pouvoir lire cette vidéo, votre navigateur doit prendre en charge la vidéo ouverte ou bien <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 ;Opening Soon
-Opening Soon
+Ouverture imminente
 
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
-Mozilla Marketplace — <em>Opening Soon</em>
+Marketplace de Mozilla — <em>Ouverture imminente</em>
 
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-
+Avant son lancement public cette année, Mozilla va ouvrir son Marketplace aux test utilisateurs. Profitez-en pour être parmi les premiers développeurs d'applications à se faire connaître et conquérir des utilisateurs. Soumettez votre application pour&nbsp;:
 
 ;Test your app with a committed group of early adopters.
-Test your app with a committed group of early adopters.
+La tester grâce à un groupe d'utilisateurs précoces passionnés.
 
 
 ;Build an early fan base and gain popularity.
-Build an early fan base and gain popularity.
+Créer une première base d'utilisateurs enthousiastes et augmenter sa popularité.
 
 
 ;Target tech savvy consumers with your app.
-Target tech savvy consumers with your app.
+Viser les utilisateurs avancés.
 
 
