--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -178,18 +178,19 @@ Hvala, da ste nam povedali svoje razloge za odjavo.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla - novice
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Hvala! Poglejte v svoj vhodni predal, da potrdite svojo prijavo.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-
+Od mozilla@e.mozilla.org boste dobili obvestilo, da potrdite svojo naročnino. Preverite svoj filter za smeti, če pošte ni najti. Prijavo morate potrditi, da boste novice lahko dobivali.  
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Ne pozabite dodati našega naslova - mozilla@e.mozilla.org - v svoj adresar. Tako bomo lahko vedno prišli do vašega vhodnega predala.
+
+
 
 
