l10n: fr, newsletter update by Goofy
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105173 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -6,7 +6,7 @@ Recevez notre lettre mensuelle
 
 
 ;Your Email Address
-Votre courriel
+Votre adresse électronique
 
 
 ;Text
@@ -22,7 +22,7 @@ Sélectionnez votre pays
 
 
 ;Whoops! Be sure to enter a valid email address.
-Oups&nbsp;! L'adresse que vous avez tapée est invalide
+Oups&nbsp;! L'adresse que vous avez saisie est invalide
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -42,7 +42,7 @@ Nous ne vous enverrons que des informations concernant Mozilla
 
 
 ;Thanks for Subscribing!
-Merci de votre inscription&nbsp;!
+Merci de vous être abonné&nbsp;!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
@@ -54,7 +54,7 @@ Abonnez-vous pour être informé chaque mois de toutes les mises à jour et des 
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Vérifiez dans votre boîte de réception si vous avez bien reçu le message de confirmation. Votre inscription à la lettre d'information de Mozilla ne sera effective qu'après avoir cliqué sur le lien de confirmation.
+Vérifiez dans votre boîte de réception que vous avez bien reçu le message de confirmation. Votre inscription à la lettre d'informations de Mozilla ne sera effective qu'après avoir cliqué sur le lien de confirmation.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -62,7 +62,7 @@ Découvrez notre <span>lettre d'informations</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Votre inscription à la lettre d'information a bien été confirmée.
+Votre inscription à la lettre d'informations est maintenant confirmée.
 
 
 ;Format
@@ -98,7 +98,7 @@ Découvrez les toutes dernières fonctionnalités et extensions destinées à Fi
 
 
 ;Beta News
-Journal des bêtas
+Journal des versions bêtas
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
@@ -114,23 +114,23 @@ Firefox est aussi présent sur vos réseaux sociaux favoris. Contactez-nous et r
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Gérer vos <span>abonnements</span>
+Gérez vos <span>abonnements</span>
 
 
 ;Subscribe
-Inscription
+Abonnement
 
 
 ;Unsubscribe
-Désinscription
+Désabonnement
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Cocher la case si vous désirez vous désinscrire de toutes les lettres d'information de Mozilla
+Cocher la case si vous désirez vous désabonner de toutes les lettres d'informations de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Me désinscrire de toutes les lettres d'information de Mozilla
+Me désinscrire de toutes les lettres d'informations de Mozilla
 
 
 ;Save Preferences
@@ -142,11 +142,11 @@ Merci d'avoir mis à jour vos préférences de réception du courrier.
 
 
 ;You've been unsubscribed.
-Vous avez été désinscrit.
+Vous avez été désabonné.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-Nous sommes désolés de vous voir partir. Pouvez-vous nous dire pourquoi vous vous désinscrivez&nbsp;?
+Nous sommes désolés de vous voir partir. Pouvez-vous nous dire pourquoi vous vous désabonnez&nbsp;?
 
 
 ;You send too many emails.
@@ -174,11 +174,11 @@ Envoyer
 
 
 ;Thanks for telling us why you’re leaving.
-Merci de nous dire pourquoi vous vous désinscrivez.
+Merci de nous dire pourquoi vous vous désabonnez.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Lettres d'informations de Mozilla.
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
@@ -186,7 +186,7 @@ Merci&nbsp;! Veuillez relever votre boîte aux lettres pour confirmer votre abon
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-Vous allez recevoir un message de mozilla@e.mozilla.org pour confirmer votre abonnement. Si vous ne le voyez pas dans votre boîte aux lettres, vérifiez qu'il n'a pas échoué dans les courriers indésirables. Vous devrez confirmer votre abonnement pour recevoir notre lettre d'information.
+Vous allez recevoir un message de mozilla@e.mozilla.org pour confirmer votre abonnement. Si vous ne le voyez pas dans votre boîte aux lettres, vérifiez qu'il n'a pas échoué dans les courriers indésirables. Vous devrez confirmer votre abonnement pour recevoir notre lettre d'informations.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
