l10n: fr, snippet update by Goofy
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105174 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -122,7 +122,7 @@ Vous utilisez Firefox sur plusieurs ordinateurs&nbsp;? Il vous est maintenant po
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rapide et surtout… rapide&nbsp;! <a %s>Firefox pour Android vient de bénéficier d'une mise à jour majeure</a>. Aidez-nous à faire passer le message.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
