l10n: sl, newsletter update by Novica Nakov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105175 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mk/newsletter.lang
+++ b/mk/newsletter.lang
@@ -178,18 +178,18 @@ Firefox е и на Вашите омилени друштвени мрежи. П
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Билтени на Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Благодариме! Проверете го Вашето сандаче за да ја потврдите претплатата.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Ќе добиете е-пошта од mozilla@e.mozilla.org за да ја потврдите претплатата. Ако не ја видите, проверете ги Вашите филтри за спам. Мора да ја потврдите претплатата за да го добиете билтенот.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Додајте ја нашата испраќачка адреса: mozilla@e.mozilla.org во Вашиот адресар за да се осигурате дека поштата секогаш ќе стигнува во Вашето сандаче.
 
 
