--- a/en-GB/marketplace/marketplace.lang
+++ b/en-GB/marketplace/marketplace.lang
@@ -1,8 +1,16 @@
+
+
 ;Sign up for more news about the Mozilla Marketplace.
 Sign up for more news about the Mozilla Marketplace.
+
+
+;Thank you for signing up!
+Thank you for signing up!
 
 
 ;YOUR EMAIL HERE
 YOUR EMAIL HERE
 
 
+;Sign up&nbsp;»
+Sign up&nbsp;»
