l10n: fr, update marketplace strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105233 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/marketplace/marketplace.lang
+++ b/fr/marketplace/marketplace.lang
@@ -2,7 +2,13 @@
 Sign up for more news about the Mozilla Marketplace.
 
 
+;Thank you for signing up!
+Merci de vous être abonné&nbsp;!
+
+
 ;YOUR EMAIL HERE
 VOTRE EMAIL
 
 
+;Sign up&nbsp;»
+Abonnement&nbsp;»
