l10n: fr, update marketplace strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105234 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/marketplace/marketplace.lang
+++ b/fr/marketplace/marketplace.lang
@@ -1,5 +1,5 @@
 ;Sign up for more news about the Mozilla Marketplace.
-Sign up for more news about the Mozilla Marketplace.
+Abonnez-vous et recevez des nouvelles de Mozilla Marketplace
 
 
 ;Thank you for signing up!
