[ko] update lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105238 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/newsletter.lang
+++ b/ko/newsletter.lang
@@ -178,18 +178,15 @@ Mozilla 이메일 구독 취소
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla 뉴스레터
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+감사합니다. 메일함에 구독 확인 메일을 살펴봐 주세요.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-
+mozilla@e.mozilla.org로 부터 구독 확인 메일이 도착했을 것입니다. 스팸 필터에 들어가 있는지 확인해 보시기 바랍니다.
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+뉴스레터 메일이 스팸함에 들어가지 않도록 mozilla@e.mozilla.org 메일을 확인해 주십시오.
