new marcketplace strings translated; missing {ok} added
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105251 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/marketplace/marketplace.lang
+++ b/pt-BR/marketplace/marketplace.lang
@@ -1,16 +1,11 @@
-
-
 ;Sign up for more news about the Mozilla Marketplace.
-Sign up for more news about the Mozilla Marketplace.
-
+Assine para receber mais notícias sobre o Mozilla Marketplace.
 
 ;Thank you for signing up!
-Thank you for signing up!
-
+Obrigado por assinar!
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
-
+SEU E-MAIL AQUI
 
 ;Sign up&nbsp;»
-Sign up&nbsp;»
+Assinar&nbsp;»
