--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -178,7 +178,7 @@ Obrigado por esclarecer sua partida.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla Newsletters {ok}
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
