--- a/pt-BR/marketplace/partners.lang
+++ b/pt-BR/marketplace/partners.lang
@@ -8,7 +8,7 @@ Em Breve
 Parceiros do Mozilla Marketplace
 
 ;Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps.
-A Mozilla está trazendo seus valores fundamentais — abertura, liberdade, liberdade de escolha — para o mundo dos aplicativos.
+A Mozilla está trazendo seus valores fundamentais — abertura, liberdade de escolha — para o mundo dos aplicativos.
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 Este vídeo requer um navegador com suporte a vídeo aberto ou o plug-in <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
@@ -23,25 +23,25 @@ A plataforma de aplicativos Mozilla
 Mozilla Marketplace {ok}
 
 ;Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
-Construir aplicativos para a web permite que desenvolvedores tenham maior controle sobre o conteúdo, funcionalidades e como o aplicativo será distribuído, incluindo acesso a centenas de milhares de usuários do Firefox por meio do Mozilla Marcketplace.
+Construir aplicativos para a web permite que desenvolvedores tenham maior controle sobre o conteúdo, funcionalidades e como o aplicativo será distribuído, incluindo acesso a centenas de milhares de usuários do Firefox por meio do Mozilla Marketplace.
 
 ;Submit your app »
 Envie seu aplicativo »
 
 ;Launch your app on the Web
-Carregar seu aplicativo na web
+Carregue seu aplicativo na web
 
 ;Target tech savvy consumers with your app.
 Direcionar seu aplicativo para uma audiência de consumidores com experiência em tecnologia.
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Antes do lançamento público ainda este ano, a Mozilla vai abrir o Marcketplace para testes de usuários. Aproveite esta oportunidade para ser um dos primeiros desenvolvedores de aplicativos a construir uma base de usuários. Envie seu aplicativo para:
+Antes do lançamento público ainda este ano, a Mozilla vai abrir o Marketplace para testes de usuários. Aproveite esta oportunidade para ser um dos primeiros desenvolvedores de aplicativos a construir uma base de usuários. Envie seu aplicativo para:
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
 Mozilla Marketplace — <em>Em Breve</em>
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-Usando padrões web abertos e as APIS concebidas pela Mozilla, ótimas experiências com aplicativos podem ser distribuídas para diversas plataformas, dispositivos e sistemas operacionais — tapando o buraco entre aplicativos web e nativos pela primeira vez.
+Usando padrões abertos da internet e as APIS concebidas pela Mozilla, ótimas experiências com aplicativos podem ser distribuídas para diversas plataformas, dispositivos e sistemas operacionais — tapando o buraco entre aplicativos da internet e nativos pela primeira vez.
 
 ;Test your app with a committed group of early adopters.
 Testar seus aplicativos com um grupo empenhado de usuários pioneiros.
