--- a/pt-BR/marketplace/partners.lang
+++ b/pt-BR/marketplace/partners.lang
@@ -41,7 +41,7 @@ Antes do lançamento público ainda este ano, a Mozilla vai abrir o Marketplace 
 Mozilla Marketplace — <em>Em Breve</em>
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-Usando padrões abertos da internet e as APIS concebidas pela Mozilla, ótimas experiências com aplicativos podem ser distribuídas para diversas plataformas, dispositivos e sistemas operacionais — tapando o buraco entre aplicativos da internet e nativos pela primeira vez.
+Usando padrões abertos da internet e as APIs concebidas pela Mozilla, ótimas experiências com aplicativos podem ser distribuídas para diversas plataformas, dispositivos e sistemas operacionais — tapando o buraco entre aplicativos da internet e nativos pela primeira vez.
 
 ;Test your app with a committed group of early adopters.
 Testar seus aplicativos com um grupo empenhado de usuários pioneiros.
