[l10n: gl] updated newsletter.lang file for www.mozilla.org - add a new string for the newsletter center tab (tab title)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105300 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -178,7 +178,7 @@ Grazas por dicirnos porque se vai.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Boletíns de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
