[l10n: gl] updated newsletter.lang file for www.mozilla.org - update newsletter.lang files and confirmation messages (Bug 742997)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105301 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -182,14 +182,14 @@ Boletíns de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Grazas! Comprobe a súa caixa de entrada para confirmar a subscrición.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Recibirá un correo de mozilla@e.mozilla.org para confirmar a subscrición. Se non o ve, comprobe o cartafol de correo lixo. Debe confirmar a subscrición para recibir o noso boletín.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Asegúrese de engadir o correo: mozilla@e.mozilla.org a súa axenda de enderezos para que os nosos correos sempre lle cheguen a caixa de entrada.
 
 
