updated newsletter.lang file missing translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105302 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -178,18 +178,18 @@ A jaaraama e habrude-min ko waɗ maa yahde.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Ɓatakeeji Habrirde Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+A jaaraama! Tiiɗno ƴeew wakannde ɓatakeeji maa ngam teeŋtinde binnditagol maa.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Maa heɓ iimeel ummiiɗo to mozilla@e.mozilla.org ngam teeŋtinde binnditagol maa. So a yiyaani iimeel oo, ƴeewto seɗorde spam maa. Alaa e sago teeŋtinaa binnditagol maa ndee keɓaa ɓatakeeji amen.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Tiiɗno ɓeydu ñiiɓirde amen neldirde ndee: mozilla@e.mozilla.org e doggol jokkondire maa mbele min mbaawa heɓde-ma sahaa kala.
 
 
