updated firefoxlive.lang file missing translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105303 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/firefoxlive.lang
+++ b/ff/firefoxlive.lang
@@ -31,7 +31,7 @@ Ballal widewoo
 
 
 ;Do you like baby animals? Mozilla Firefox is streaming video of their 3 adopted red panda babies. Spread the word and 'share' with your friends.
-Aɗa yiɗi tigguyon kulle ladde? Mozilla Firefox ena siiɓtoroo widewoo tigguyon panndaaji mum 3 boɗeeji nehaaɗi. Sar kabaaru ooo tee 'simmin' heen bannde en.
+Aɗa yiɗi tigguyon kulle ladde? Mozilla Firefox ena siiɓtoroo widewoo tigguyon panndaaji mum 3 boɗeeji nehaaɗi. Sar kabaaru ngam tintinde musidɓe maa.
 
 
 ;What is more endearing? Firefox’s non-profit mission or a live feed of their animal mascot? Find out http://mzl.la/sPo5yu
@@ -43,8 +43,8 @@ Wallu Firefox reende kumbel mum caɗtuɗo e Geese ɗee so ndaarde ɓiykon kulle!
 
 
 ;Share on Twitter »
-Simmin e Twitter »
+Lollin e Twitter »
 
 
 ;Share on Facebook »
-Simmin e Facebook »
+Lollin e Facebook »
