[lt] update newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105322 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/newsletter.lang
+++ b/lt/newsletter.lang
@@ -178,18 +178,18 @@ Dėkojame už Jūsų atsakymą.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+„Mozillos“ naujienlaiškiai
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Ačiū! Dabar prašome pasitikrinti savo el. pašto dėžutę ir patvirtinti prenumeratą.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Netrukus iš mozilla@e.mozilla.org gausite laišką, prašantį patvirtinti prenumeratą. Jeigu jo nematote, paieškokite brukalo aplanke. Kad gautumėte naujienlaiškį, privalote patvirtinti prenumeratą.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Patariame įtraukti mūsų naujienlaiškių siuntimo adresą – mozilla@e.mozilla.org – į adresų knygą. Taip užtikrinsite, jog mūsų laiškai Jus visuomet pasieks.
 
 
