l10n:lij new string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105327 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -178,18 +178,17 @@ Gràçie de avéine dîto perché ti ne làsci.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Newsletter do Mozilla 
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Gràçie! Pe favô vànni inta teu email pe confermâ l'iscriçión.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-
+Ti ti riçeviæ 'na email da mozilla@e.mozilla.org pe confermâ a teu iscriçión. Se no ti-a véddi, contròlla o teu fìltro anti spam. Ti dêvi confermâ a teu iscriçión pe riçéive a nòstra newsletter
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Amîa bén de avéi azónto o nòstro indirìsso: mozilla@e.mozilla.org a-o teu agénda pe êse segûo che e nòstre email t'arìvan de lóngo.
 
 
